--- a/GLHFTV/Podfile
+++ b/GLHFTV/Podfile
@@ -1,2 +1,4 @@
-platform :ios
+platform :ios, '6.0'
 pod 'CocoaLumberjack', '~> 1.6.2'
+pod 'CocoaHTTPServer', '~> 2.3'
+pod 'CocoaAsyncSocket', '~> 7.3.1'
